--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#333333" />
     <meta
       name="description"
-      content="A simple, web-based chat app"
+      content="DropIn is a simple, web-based chat app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
@@ -26,7 +26,7 @@
     <title>DropIn Chat</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to use DropIn.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
