--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Resolve FOUC (pardon my french) -->
+    <style>
+      html {
+        background-color: #333333;
+      }
+    </style>
     <title>DropIn Chat</title>
   </head>
   <body>
